		   CHANGES IN formatR VERSION 0.2-2

NEW FEATURES

    o long roxygen comments will not be wrapped (i.e. comments begin
  with #' or ##')

MINOR CHANGES

    o fixed a minor problem in the function usage() (out --> output)

    o comments after { will be discarded


		   CHANGES IN formatR VERSION 0.2-1

MINOR CHANGES

    o the escape character '\' in comments of complete lines will be
  successfully preserved, which is especially useful for tidy.source()
  to format the roxygen comments since we usually write comments like
  "##' @author Someone \email{}" but "\e" is not a legal character in
  R (this will lead to errors in earlier versions of this package)


		   CHANGES IN formatR VERSION 0.2-0

NEW FEATURES

    o a new function usage() to print the formatted usage of a function


		   CHANGES IN formatR VERSION 0.1-9

NEW FEATURES

    o tidy.source() can wrap long comments into shorter ones now (this
  only applies to the whole lines of comments; the inline comments
  will not be wrapped since it is tricky to do so)

MINOR CHANGES

    o '\t' will be parsed to ' ' when 'keep.space' is TRUE in
  tidy.source() (this might be undesirable, though)


		   CHANGES IN formatR VERSION 0.1-8

NEW FEATURES

    o new functions parse.tidy() and deparse.tidy() for the package
  pgfSweave to help tidy the source code in Sweave

    o a new function tidy.dir() to format all the R scripts under a
  directory

    o added a package vignette


		   CHANGES IN formatR VERSION 0.1-7

NEW FEATURES

    o full support to multi-byte characters in the formatR() GUI

    o a new function unmask.source() to obtain the real source code
  from the masked source

    o a new operator '%InLiNe_IdEnTiFiEr%' designed mainly for
  pgfSweave (mask the inline comments)


		   CHANGES IN formatR VERSION 0.1-6

NEW FEATURES

    o the inline comments will also be preserved in most cases (in
  earlier versions, only single lines of comments are preserved)
